# QREncoderRust

./: .gitignore  Cargo.toml
decode_qrs_lib/: Cargo.toml
decode_qrs_lib/src/: lib.rs
encoder_qr/: Cargo.toml
encoder_qr/src/: frames_utils.rs  gpu_utils.rs  image_utils.rs  main.rs  qr_utils.rs  shader.wgsl
encoder_qr/src/olds/: old_process_frames.rs
